FINAL Finding Datasets HMWK

--- a/finding_datasets.html
+++ b/finding_datasets.html
@@ -31,7 +31,7 @@ The FBI collects this crime data through the Uniform Crime Reporting (UCR) Progr
 This is newsworthy because the shift in Presidential power has resulted in a major crackdown on crime and how it is enforced. It is also newsworthy because in general, people want to know how safe their state and community is. A good audience for this story would be people in any area in the country. I am most interested in the crime in Washington, D.C. because of President Trump’s recent implementation of the military in D.C to combat crime.  
 
 
-Homicide in Washington, D.C. decreased by over 50% after President Trump’s implementation of the military in the area in an effort to combat crime.
+A good data hypothesis is that Homicide in Washington, D.C. decreased by over 50% after President Trump’s implementation of the military in the area in an effort to combat crime.
 </a> </p>
 
 <p><a href="https://nces.ed.gov/ipeds/Search?query=tuition&query2=tuition&resultType=all&page=1&sortBy=relevance&overlayDigestTableId=202707 " target="_blank">This is my second dataset.</a>
@@ -43,7 +43,7 @@ IPEDS is a system of interrelated surveys conducted annually by the U.S. Departm
 This is newsworthy because college is becoming an expensive purchase and investment for many families. From the data, parents can decide whether the huge increase in cost at Private Universities is worth it for their kid, or if they can get just as good of an education from a Public University. 
 
 
-Private Universities cost more than double the amount for tuition, room, board, and fees combined than Public Universities on the East Coast. 
+A good data hypothesis is that Private Universities cost more than double the amount for tuition, room, board, and fees combined than Public Universities on the East Coast. 
 </p>
 		</section>
 
