Updates Finding Datasets with Bold and Numbers

--- a/finding_datasets.html
+++ b/finding_datasets.html
@@ -24,26 +24,26 @@
 		<section>
 			<p><a href="https://cde.ucr.cjis.gov/LATEST/webapp/#/pages/explorer/crime/crime-trend" target="_blank">This is my first dataset.</a> I filtered District of Columbia and by Homicides
 
+<li>1. <strong>How is this data organized and collected?</strong>
+The FBI collects this crime data through the Uniform Crime Reporting (UCR) Program which generates reliable statistics for use in law enforcement. The UCR Program includes data from over 18,000 city, university and college, county, state, tribal, and federal law enforcement agencies. These agencies participate voluntarily by submitting their crime data either through a state UCR program or directly to the FBI’s UCR Program.</li>
 
-The FBI collects this crime data through the Uniform Crime Reporting (UCR) Program which generates reliable statistics for use in law enforcement. The UCR Program includes data from over 18,000 city, university and college, county, state, tribal, and federal law enforcement agencies. These agencies participate voluntarily by submitting their crime data either through a state UCR program or directly to the FBI’s UCR Program.
+<li>2. <strong>Why is this newsworthy? Who would be a good audience for a story on this?</strong>
+This is newsworthy because the shift in Presidential power has resulted in a major crackdown on crime and how it is enforced. It is also newsworthy because in general, people want to know how safe their state and community is. A good audience for this story would be people in any area in the country. I am most interested in the crime in Washington, D.C. because of President Trump’s recent implementation of the military in D.C to combat crime.</li>  
 
-
-This is newsworthy because the shift in Presidential power has resulted in a major crackdown on crime and how it is enforced. It is also newsworthy because in general, people want to know how safe their state and community is. A good audience for this story would be people in any area in the country. I am most interested in the crime in Washington, D.C. because of President Trump’s recent implementation of the military in D.C to combat crime.  
-
-
-A good data hypothesis is that Homicide in Washington, D.C. decreased by over 50% after President Trump’s implementation of the military in the area in an effort to combat crime.
+<li>3. <strong>What is one data hypothesis you could make about this dataset?</strong>
+A good data hypothesis is that Homicide in Washington, D.C. decreased by over 50% after President Trump’s implementation of the military in the area in an effort to combat crime.</li>
 </a> </p>
 
 <p><a href="https://nces.ed.gov/ipeds/Search?query=tuition&query2=tuition&resultType=all&page=1&sortBy=relevance&overlayDigestTableId=202707 " target="_blank">This is my second dataset.</a>
 
+<li>1. <strong>How is this data organized and collected?</strong>
+IPEDS is a system of interrelated surveys conducted annually by the U.S. Department of Education’s National Center for Education Statistics. IPEDS gathers information from every college, university, and technical and vocational institution that participates in the federal student financial aid programs. This is required by The Higher Education Act of 1965.</li>
 
-IPEDS is a system of interrelated surveys conducted annually by the U.S. Department of Education’s National Center for Education Statistics. IPEDS gathers information from every college, university, and technical and vocational institution that participates in the federal student financial aid programs. This is required by The Higher Education Act of 1965.
+<li>2. <strong>Why is this newsworthy? Who would be a good audience for a story on this?</strong>
+This is newsworthy because college is becoming an expensive purchase and investment for many families. From the data, parents can decide whether the huge increase in cost at Private Universities is worth it for their kid, or if they can get just as good of an education from a Public University.</li> 
 
-
-This is newsworthy because college is becoming an expensive purchase and investment for many families. From the data, parents can decide whether the huge increase in cost at Private Universities is worth it for their kid, or if they can get just as good of an education from a Public University. 
-
-
-A good data hypothesis is that Private Universities cost more than double the amount for tuition, room, board, and fees combined than Public Universities on the East Coast. 
+<li>3. <strong>What is one data hypothesis you could make about this dataset?</strong>
+A good data hypothesis is that Private Universities cost more than double the amount for tuition, room, board, and fees combined than Public Universities on the East Coast. </li>
 </p>
 		</section>
 
