9/28 HMWK: Basic Dataset Analysis Restaurant Updated

--- a/inspection_hypothesis.html
+++ b/inspection_hypothesis.html
@@ -22,7 +22,7 @@
 		</div>
 
 		<section>
-			<p>You can find my dataset with my data dictionary and answers <a href="https://docs.google.com/spreadsheets/d/1Lvf2GfqjsVo0EbUf5ljw0DIpR3oh8-bASHs_q9zJSPE/edit?gid=1601395933#gid=1601395933" target="_blank">here</a> My data hypothesis is that school K-12 food services have two times more the amount of total critical violations than the next highest food service establishment.</a> </p>
+			<p>You can find my dataset with my data dictionary and answers <a href="https://docs.google.com/spreadsheets/d/1Lvf2GfqjsVo0EbUf5ljw0DIpR3oh8-bASHs_q9zJSPE/edit?gid=1601395933#gid=1601395933" target="_blank">here. </a> My data hypothesis is that school K-12 food services have two times more the amount of total critical violations than the next highest food service establishment.</a> </p>
 		</section>
 
 		<div id="end">
