UPDATED: Midterm Trees Question 8

--- a/midterm_trees.html
+++ b/midterm_trees.html
@@ -22,7 +22,7 @@
 		</div>
 
 <section>
-     <p>Looking ahead, the Bronx will see more than 1,000 tree plantings in the December 2025 season, an almost 50 percent increase from the previous planting season. In the January 2026 planting season, there are no tree plantings for the Manhattan or Staten Island boroughs, but nearly 2,500 trees planned for Queens. Of the six tree plantings planned for Manhattan in the June 2026 planting season, two are on West End Ave, and two are on Columbus Ave. All six of the plantings are in city council district six.</p>  
+     <p>Looking ahead, the Bronx will see more than 1,000 tree plantings in the December 2025 season, an almost 50 percent increase from the previous planting season. In the January 2026 planting season, there are no tree plantings planned for the Manhattan or Staten Island boroughs, but nearly 2,500 trees are planned for Queens. Of the six tree plantings planned for Manhattan in the June 2026 planting season, two are on West End Ave, and two are on Columbus Ave. All six of the tree plantings are in city council district six.</p>  
    
 </section>
 
