Bowen_Data_Nov18

--- a/datawrapper_chart.html
+++ b/datawrapper_chart.html
@@ -27,7 +27,7 @@
 		</section>
 
 		<!-- STEP TWO: Add the photo of your sketched chart here. Don't forget to upload the actual photo to your Github repo so that it shows up on your webpage. -->
-		<img src="syr_map.png" alt="a map of Syracuse" height="300px" width="400px">
+		<img src="Bowen_Bankability_Dataviz_Draw.jpg" alt="a map of Syracuse" height="300px" width="400px">
 		
 
 		<!-- STEP THREE: Add the screenshot of your first Datawrapper chart here. Don't forget to upload the actual screenshot to your Github repo so that it shows up on your webpage. -->
@@ -35,16 +35,15 @@
 
 		<!-- STEP FOUR: Add the feedback you got from your partner here. -->
 		<section>
-			<p>tktktk feedback I got on this chart tktktktk</p>
+			<p>My partner gave me some great feedback. First, she told me to eliminate the big chunk of words under my title, making it more concise. I moved one of the sentences to the notes at the bottom as it helped make the dataset more simple. Second, I bolded the major findings to make them pop to the audience. Finally, I tweaked my title to make it more related to what the data was showing.</p>
 		</section>
 
 		<!-- STEP FIVE: Add the iframe for your updated chart here. Replace the entire iframe below, from <iframe... to </script> -->
-		<iframe title="Syracuse University has a well-known journalism school" aria-label="map" id="datawrapper-chart-gym6W" src="https://datawrapper.dwcdn.net/gym6W/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="536"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(e){if(void 0!==e.data["datawrapper-height"]){var t=document.querySelectorAll("iframe");for(var a in e.data["datawrapper-height"])for(var r=0;r<t.length;r++){if(t[r].contentWindow===e.source)t[r].style.height=e.data["datawrapper-height"][a]+"px"}}}))}();
-		</script>
+		<iframe title="Bankability isn't determined by how many films someone has worked on" aria-label="Scatter Plot" id="datawrapper-chart-pY8L6" src="https://datawrapper.dwcdn.net/pY8L6/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="451" data-external="1"></iframe><script type="text/javascript">window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}});</script>
 
 		<!-- STEP SIX: Explain what you changed on your chart here, and why. -->
 		<section>
-			<p>tktktk what I changed on my chart tktktktk</p>
+			<p>I made my title more concise, bolded my major findings and eliminated one of them to make the data look cleaner, and moved some of the information from my subheading to my notes section.</p>
 		</section>
 
 		<div id="end">
