Bowen_Bankability_Nov18_FINAL

--- a/datawrapper_chart.html
+++ b/datawrapper_chart.html
@@ -23,7 +23,7 @@
 
 		<!-- STEP ONE: Add an introduction to your dataviz here, and what story it will be a part of. -->
 		<section>
-			<p>This dataset compares the total number of films someone in the film industry has worked on versus the Bankability of those people. These people range from actors to composers and directors. </p>
+			<p>This dataset compares the total number of films someone in the film industry has worked on versus the bankability of those people. These people range from actors to composers and directors. </p>
 		</section>
 
 		<!-- STEP TWO: Add the photo of your sketched chart here. Don't forget to upload the actual photo to your Github repo so that it shows up on your webpage. -->
@@ -35,7 +35,7 @@
 
 		<!-- STEP FOUR: Add the feedback you got from your partner here. -->
 		<section>
-			<p>My partner gave me some great feedback. First, she told me to eliminate the big chunk of words under my title, making it more concise. I moved one of the sentences to the notes at the bottom as it helped make the dataset more simple. Second, I bolded the major findings to make them pop to the audience. Finally, I tweaked my title to make it more related to what the data was showing.</p>
+			<p>My partner gave me some great feedback. First, she told me to eliminate the big chunk of words under my title, making it more concise. She then recommended I make the findings stand out using another color or by bolding them.</p>
 		</section>
 
 		<!-- STEP FIVE: Add the iframe for your updated chart here. Replace the entire iframe below, from <iframe... to </script> -->
@@ -43,7 +43,7 @@
 
 		<!-- STEP SIX: Explain what you changed on your chart here, and why. -->
 		<section>
-			<p>I made my title more concise, bolded my major findings and eliminated one of them to make the data look cleaner, and moved some of the information from my subheading to my notes section.</p>
+			<p>I bolded my major findings and eliminated one of them to make the data look cleaner. This helped to polish up the visual aspect of the chart, making it more digestable and readable. I then moved some of the information from my subheading to my notes section because the subheading was getting too long. In addition, the content in my notes section makes sense to be there instead of in my subheading. </p>
 		</section>
 
 		<div id="end">
